# src/backend_api/app/app/core/schemas/turnstile.py
@@ -3,12 +3,12 @@ import pydantic as _pydantic
 from pydantic import conlist
 
 
-class TurnstyleQuery(_pydantic.BaseModel):
+class TurnstileQuery(_pydantic.BaseModel):
     token: str
     ip: str
 
 
-class TurnstyleResponse(_pydantic.BaseModel):
+class TurnstileResponse(_pydantic.BaseModel):
     success: bool
     error_codes: Optional[List[str]] = None
     challenge_ts: str
