# src/frontend/openapi.json
@@ -2201,19 +2201,19 @@
         ]
       }
     },
-    "/api/api_v1/turnstyle/": {
+    "/api/api_v1/turnstile/": {
       "post": {
         "tags": [
-          "turnstyles"
+          "turnstiles"
         ],
-        "summary": "Get Turnstyle Validation",
-        "description": "Takes a query based on the 'TurnstyleQuery' schema and retrieves data\nbased on the cloudfare challenge turnstyle validation response.\n\nArgs:\n    query (schemas.TurnstyleQuery): Query based on the 'TurnstyleQuery' schema.\n    verification (bool, optional): Verification flag. Defaults to Depends(verification).\n\nRaises:\n    HTTPException: If verification fails.\n\nReturns:\n    _type_: Returns a response based on the 'TurnstyleResponse' schema.",
-        "operationId": "get_turnstyle_validation_api_api_v1_turnstyle__post",
+        "summary": "Get Turnstile Validation",
+        "description": "Takes a query based on the 'TurnstileQuery' schema and retrieves data\nbased on the cloudfare challenge turnstile validation response.\n\nArgs:\n    query (schemas.TurnstileQuery): Query based on the 'TurnstileQuery' schema.\n    verification (bool, optional): Verification flag. Defaults to Depends(verification).\n\nRaises:\n    HTTPException: If verification fails.\n\nReturns:\n    _type_: Returns a response based on the 'TurnstileResponse' schema.",
+        "operationId": "get_turnstile_validation_api_api_v1_turnstile__post",
         "requestBody": {
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/TurnstyleQuery"
+                "$ref": "#/components/schemas/TurnstileQuery"
               }
             }
           },
@@ -2225,7 +2225,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/TurnstyleResponse"
+                  "$ref": "#/components/schemas/TurnstileResponse"
                 }
               }
             }
@@ -4606,7 +4606,7 @@
         ],
         "title": "StashUpdate"
       },
-      "TurnstyleQuery": {
+      "TurnstileQuery": {
         "properties": {
           "token": {
             "type": "string",
@@ -4622,13 +4622,27 @@
           "token",
           "ip"
         ],
-        "title": "TurnstyleQuery"
+        "title": "TurnstileQuery"
       },
-      "TurnstyleResponse": {
+      "TurnstileResponse": {
         "properties": {
           "success": {
             "type": "boolean",
             "title": "Success"
+          },
+          "error_codes": {
+            "anyOf": [
+              {
+                "items": {
+                  "type": "string"
+                },
+                "type": "array"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Error Codes"
           },
           "challenge_ts": {
             "type": "string",
@@ -4638,12 +4652,17 @@
             "type": "string",
             "title": "Hostname"
           },
-          "error_codes": {
-            "items": {
-              "type": "string"
-            },
-            "type": "array",
-            "title": "Error Codes"
+          "action": {
+            "type": "string",
+            "title": "Action"
+          },
+          "cdata": {
+            "type": "string",
+            "title": "Cdata"
+          },
+          "metadata": {
+            "type": "object",
+            "title": "Metadata"
           }
         },
         "type": "object",
@@ -4651,9 +4670,11 @@
           "success",
           "challenge_ts",
           "hostname",
-          "error_codes"
+          "action",
+          "cdata",
+          "metadata"
         ],
-        "title": "TurnstyleResponse"
+        "title": "TurnstileResponse"
       },
       "ValidationError": {
         "properties": {
